Fix code compilation on Solaris 8. isblank is not available outside the GNU C library:        isblank()               checks  for  a blank character; that is, a space or a tab.  This               function is a GNU extension.

Instead, let's rely on QChar, which is always fully Unicode.

To the Kalzium developers: m_str is a QString, so why is m_nextChar an int,
instead of a QChar?

BUG:114817        

svn path=/branches/KDE/3.5/kdeedu/kalzium/; revision=472788